IGNITE-16689 Get rid of guava library in sql-engine module